# OpenCV

./: .gitignore  CMakeLists.txt  Readme.md  requirements.txt
utils/: CMakeLists.txt
